--- a/Build-an-R-GIS-server.org
+++ b/Build-an-R-GIS-server.org
@@ -857,7 +857,12 @@ then let's demo the Tasmanian SLAs:
 # java
 # yum install java-1.6.0-openjdk-devel
 http://coastalrocket.blogspot.com.au/2012/08/installing-geostack-on-centos-6-64bit.html
-yum -y install tomcat6 tomcat6-webapps tomcat6-admin-webapps
+yum -y install tomcat6 tomcat6-webapps tomcat6-admin-webapps 
+or
+http://newpush.com/2011/10/how-to-install-tomcat-6-on-rhel-6-or-centos-6/
+
+
+
 vi /etc/tomcat6/tomcat-users.xml
 #add a user with roles of admin,manager
 chkconfig tomcat6 on
@@ -875,6 +880,7 @@ http://localhost:8080/geoserver/web/
 iptables -A INPUT -p tcp --dport 8080 -j ACCEPT
 /sbin/service iptables save
 iptables -F
+cleanaway 62601472
 
 # note used the same iptables as those above
 # also did service tomcat6 start and 
