--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -379,6 +379,7 @@ install.packages("rgdal")
 download from https://kepler-project.org/users/downloads
 cd Downloads/
 mv kepler-2.3-linux.tar.gz /home/username
+cd /home/username
 tar -zxvf kepler-2.3-linux.tar.gz 
 cd kepler-2.3
 bash kepler.sh
