fix texmf for pnastwo

--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -134,6 +134,8 @@ wget
 https://raw.github.com/kjhealy/latex-custom-kjh/master/needs-org-mode/org-preamble.sty
 wget https://raw.github.com/kjhealy/latex-custom-kjh/master/needs-org-mode/org-preamble-xelatex.sty
 wget https://raw.github.com/kjhealy/latex-custom-kjh/master/needs-memoir/memoir-article-styles.sty
+wget http://www.pnas.org/site/misc/PNASTWO.CLS
+mv PNASTWO.CLS pnastwo.cls
 sudo texhash
 # NB in ivan.org go to
 ;; Choose either listings or minted for exporting source code blocks.
