--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -80,6 +80,7 @@ add to init.el
   "#+LaTeX_CLASS_OPTIONS: [bigger]\n"
   "#+latex_header: \\mode<beamer>{\\usetheme{Madrid}}\n"
   "#+latex_header: \\usepackage{verbatim}\n"
+  "#+LaTeX_HEADER: \institute[NCEPH]{National Centre for Epidemiology and Population Health}\n"
   "#+BEAMER_FRAME_LEVEL: 2\n"
   "#+COLUMNS: \%40ITEM \%10BEAMER_env(Env) \%9BEAMER_envargs(Env Args) \%4BEAMER_col(Col) \%10BEAMER_extra(Extra)\n"
   "#+latex_header: \\AtBeginSection[]{\\begin{frame}<beamer>\\frametitle{Topic}\\tableofcontents[currentsection]\\end{frame}}\n"
