--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -281,6 +281,7 @@ ran source /usr/local/rvm/scripts/rvm
 ruby -v
 ** taskjuggler
 gem install taskjuggler
+use the template in disentangle/src/testtj3.org
 ** jekyll
 gem install jekyll
 gem install rdiscount
