--- a/disentangle-overview-TEST.org
+++ b/disentangle-overview-TEST.org
@@ -16,10 +16,18 @@
 
 *** newnode-Introduction
 
-#+name:dsc
-#+begin_src R :session *R* :tangle transformations_overview.r :exports none :eval no
+\#+name:newnode-Introduction
+\#+begin_src R :session *R* :tangle transformations_overview.r :exports none :eval no
 nodes <- newnode(name='Introduction',
  inputs = c('Introduction-1'),
  outputs = c('NA')
  )
-#+end_src
+\#+end_src
+
+
+*** src-Introduction
+
+\#+name:src-Introduction
+\#+begin_src R :session *R* :tangle src/reports-Introduction.r :exports none
+x <- rnorm(1000,1,2)
+\#+end_src
