add mods to estat

--- a/disentangle-overview.org
+++ b/disentangle-overview.org
@@ -253,48 +253,62 @@ sink()
 *** test-estat
 #+name:estat
 #+begin_src R :session *R* :tangle no :exports none :eval no
-################################################################
-# name:estat
-    # # we will collect the AIC and BIC to assess the need for a referent *
-    # # town interaction
-    # if(exists('aic_table')) rm(aic_table) # it is created in the function
-    # if(exists('results_out')) rm(results_out) # it is created in the first
-    #                                         # loop iteration
-    # if(file.exists('reports/modelStratifiedByTown.txt')) file.remove('reports/modelStratifiedByTown.txt')
-
+  ################################################################
+  # name:estat
+      # # we will collect the AIC and BIC to assess the need for a referent *
+      # # town interaction
+      # if(exists('aic_table')) rm(aic_table) # it is created in the function
+      # if(exists('results_out')) rm(results_out) # it is created in the first
+      #                                         # loop iteration
+      # if(file.exists('reports/modelStratifiedByTown.txt')) file.remove('reports/modelStratifiedByTown.txt')
+  estat(
+        modGLM = fit
+        ,
+        modName = "model1.1"
+        ,
+        createCsv=F
+        )
 #+end_src
 *** R-estat
 #+name:estat
 #+begin_src R :session *R* :tangle R/estat.r :exports none :eval no
   # TODO
   # make values numeric where needed
-
+  
   ################################################################
   # name:estat
   # a function to get Akaike's and Schwarz's Bayesian information criteria.
     # named after stata function
     estat <- function(modGLM,modName,createCsv=F){
-      if(!exists('aic_table'))
-        {
-          aic_table <- matrix(ncol=5,nrow=0)
-        }
+        estats <- c(modName,
+                      length(coef(modGLM)),
+                      AIC(modGLM),
+                      AIC(modGLM, k = log(nrow(analyte))),
+                      ((modGLM$null.deviance - modGLM$deviance)/
+                        modGLM$null.deviance)*100
+          )
+          estats <- as.data.frame(t(estats))
+          names(estats) <- c('model','param','aic','bic','percentChDev')
+          estats$model       <-as.character(estats$model)
+          estats$param       <-as.numeric(as.character(estats$param       ))
+          estats$aic         <-as.numeric(as.character(estats$aic         ))
+          estats$bic         <-as.numeric(as.character(estats$bic         ))
+          estats$percentChDev<-as.numeric(as.character(estats$percentChDev))
+       if(!exists('aic_table'))
+          {
+            aic_table <- estats
+          } else {
+            aic_table <- rbind(aic_table,estats)
+          }
+       aic_table <- aic_table[order(aic_table$bic),]
+       # write to csv
+       # if(createCsv==T){
+       #   write.table(as.data.frame(t(estats)), 'aic_table.csv', sep=',', row.names=F, append=F, col.names=F)
+       # } else {
+       #   write.table(as.data.frame(t(estats)), 'aic_table.csv', sep=',', row.names=F, append=T, col.names=F)
+       # }
   
-      estats <- c(modName,
-                  length(coef(modGLM)),
-                  AIC(modGLM),
-                  AIC(modGLM, k = log(nrow(analyte))),
-                  ((modGLM$null.deviance - modGLM$deviance)/ modGLM$null.deviance)*100
-      )
-  
-      aic_table <- rbind(aic_table,estats)
-  
-      # write to csv
-      # if(createCsv==T){
-      #   write.table(as.data.frame(t(estats)), 'aic_table.csv', sep=',', row.names=F, append=F, col.names=F)
-      # } else {
-      #   write.table(as.data.frame(t(estats)), 'aic_table.csv', sep=',', row.names=F, append=T, col.names=F)
-      # }
-      return(aic_table)
+       return(aic_table)
     }
   
 #+end_src
